--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
     <div class="page">
@@ -15,7 +14,7 @@
         <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
           <a href="#" class="header__link" title="Узнать">Узнать &#8594;</a></p>
         <div class="header__main-illustration"></div>
-        <div class="header__square-pic"></div>
+        <div class="header__square-pic rotation"></div>
         </header>
         <main class="content">
             <section class="description">
@@ -27,6 +26,58 @@
                     <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
                 </div>
               </div>
+            </section>
+            <section class="techniques">
+              <h3 class="section-title">Техники обучения</h3>
+              <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+              <div class="cards">
+              <div class="cards__item">
+                <img class="cards__image" src="images/attention.png" alt="Обложка книги">
+                <h4 class="cards__title">Два вида внимания</h4>
+                <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+              </div>
+              <div class="cards__item">
+                <img class="cards__image" src="images/recall.png" alt="Статуя">
+                <h4 class="cards__title">Recall</h4>
+                <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозенные порции в памяти.</p>
+              </div>
+              <div class="cards__item">
+                <img class="cards__image" src="images/interliving.png" alt="Интерливинг">
+                <h4 class="cards__title">Интерливинг</h4>
+                <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+              </div>
+              <div class="cards__item">
+                <img class="cards__image" src="images/question.png" alt="Вопросы">
+                <h4 class="cards__title">Вопросы</h4>
+                <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+              </div>
+              <div class="cards__item">
+                <img class="cards__image" src="images/competence.png" alt="Компетенции">
+                <h4 class="cards__title">Иллюзия компетентности</h4>
+                <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+              </div>
+              </div>
+            </section>
+            <section class="video">
+              <h3 class="section-title">Видео на TED</h3>
+              <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+              <div class="video__iframes">
+                <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+                <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+              </div>
+            </section>
+            <section class="oakley">
+              <div class="two-columns">
+                <h3 class="two-columns__brief">История Барбары Оакли.</h3>
+                <div class="two-columns__main-text">
+                    <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, при чём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, что если вам что-то "плохо даётся", ваши добытые знания гораздо глубже, чем у тех, кому всё ясно с первого раза.</p>
+                </div>
+              </div>
+            </section>
+            <section class="feinman">
+              <h3 class="feinman__title">Метод Фейнмана</h3>
+              <p class="feinman__subtitle">Выучить и не забыть.</p>
+              <a href="#" class="feinman__link">Подробнее &#8594;</a>
             </section>
             <section class="digits">
               <h3 class="section-title">Цифры и факты</h3>
@@ -68,13 +119,21 @@
                 </div>
               </div>
             </section>
-            <section class="feinman">
-              <h3 class="feinman__title">Метод Фейнмана</h3>
-              <p class="feinman__subtitle">Выучить и не забыть.</p>
-              <a href="#" class="feinman__link">Подробнее &#8594;</a>
+            <section class="khan">
+              <div class="khan__container">
+                <h3 class="khan__author">Салман Хан</h3>
+                <h2 class="khan__title">Весь мир - школа</h2>
+                <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения студентов по всему миру. Книгу "Весь мир - школа" надо прочитать всем, кто занимается образованием - так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+                <p class="khan__quote-author">Джордж Лукас</p>
+                <p class="khan__quote-author-subline">Кинорежиссёр, продюссер</p>
+                <div class="khan__book-container">
+                  <img class="khan__book-pic" src="images/book.jpg" alt="Книга Весь мир - школа">
+                  <a href="#" class="khan__buy-link" title="Купить книгу">Купить книгу &#8594;</a>
+                </div>
+              </div>
             </section>
             <section class="kaufman">
-              <div class="kaufman__triangle"></div>
+              <div class="kaufman__triangle rotation"></div>
               <h3 class="section-title section-title_theme_dark">Принципы обучения</h3>
               <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
               <div class="table table_theme_dark">
@@ -118,6 +177,16 @@
                   <h3 class="table__heading">10</h3>
                     <p class="table__text">Уделяйте внимание качеству и скорости.</p>
                 </div>
+              </div>
+            </section>
+            <section class="resources">
+              <h3 class="section-title">Полезные ресурсы</h3>
+              <p class="section-subtitle">Больше материала о техниках и лайфхаках обучения.</p>
+              <div class="resources__logo-zone">
+                <a class="resources__logo" href="#" title="Arzamas"><img src="images/logo/arzamas.svg" alt="Ссылка на ресурс Арзамас"></a>
+                <a class="resources__logo" href="#" title="N+1"><img src="images/logo/n1.svg" alt="Ссылка на ресурс N+1"></a>
+                <a class="resources__logo" href="#" title="Стелка"><img src="images/logo/strelka.svg" alt="Ссылка на ресурс Стрелка"></a>
+                <a class="resources__logo" href="#" title="Полка"><img src="images/logo/polka.svg" alt="Ссылка на ресурс Полка"></a>
               </div>
             </section>
         </main>
